Fixed some alignment on the drug form multi-select

--- a/AngularWhiteBoard/WhiteBoard.Web/App/drugform/css/customTheme.css
+++ b/AngularWhiteBoard/WhiteBoard.Web/App/drugform/css/customTheme.css
@@ -1768,12 +1768,9 @@ a:hover .topnav-hover-color
 }
 
 .selected-item-label {    
-    width:155px !important; 
-    display: block;
-    min-height: 17px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-    margin-bottom: 0;
+    width:175px !important;     
+    min-height: 17px;   
+    margin: 0 !important;
     padding-left: 5px !important;
     -webkit-font-smoothing: antialiased;
     font-size: 14px !important;
